# abczarr

./: .codespell-ignore-words.txt  .codespellrc  .gitignore  LICENSE  README.md  cspell.json  pyproject.toml  zensical.toml
.github/workflows/: coverage-on-push.yaml  coverage.yaml  doc.yaml  lint-on-push.yaml  lint.yaml  publish-pypi.yaml  test-and-publish.yaml  test-matrix.yaml  test-on-push.yaml  test.yaml
docs/: index.md  requirements.txt
src/abczarr/: __init__.py  _abc.py  _version.py  abc.py  api.py  attributes.py  config.py  factory.py  generate_pyramid.py  helpers.py  metadata.py  ome.py  path.py  pyramid.py  registry.py  typing.py
src/abczarr/_core/: async.py  attributes.py  attrs.py  constants.py  dtypes.py  frozendict.py  imports.py  math.py  metadata.py  parsers.py  rfc2119.py  sharding.py  typing.py
src/abczarr/_core/auto/: __init__.py  _typing.py  _utils.py  attrs.py  converters.py  factories.py  validators.py
src/abczarr/abc/: __init__.py  array.py  group.py  node.py
src/abczarr/drivers/: __init__.py  tensorstore.py  zarr_python.py  zarrita.py
src/abczarr/metadata/: __init__.py  base.py
src/abczarr/metadata/v1/: __init__.py  array.py  base.py  dtypes.py
src/abczarr/metadata/v2/: __init__.py  array.py  base.py  dtypes.py
src/abczarr/metadata/v3/: __init__.py  array.py  base.py  extensions.py
src/abczarr/ome/: __init__.py
src/abczarr/ome/metadata/: __init__.py  base.py  rfc2119.py
src/abczarr/ome/schemas/: __init__.py  base.py
src/abczarr/schemas/v1/: __init__.py  array.py  codecs.py
src/abczarr/schemas/v2/: __init__.py  array.py  codecs.py  filters.py
src/abczarr/schemas/v3/: __init__.py  array.py  codecs.py  config.py  extensions.py
tests/: test_metadata_array.py  test_ome_schema.py  test_tests.py
tests/data/ome/v0_6rc0/: affine2d2d.json  affine2d2d_with_channel.json  affine2d3d.json  bijection.json  byDimensionXarray.json  identity.json  mapAxis1.json  multiscales_example.json  multiscales_example_relative.json  multiscales_reference_to_label.json  projectAxis.json  projectAxis2.json  (+7 more)
(+122 files in other folders)
