[project]
name = "abczarr"
authors = [{name = "Chai, Kaidong", email = "mail@kchai.me"}]
maintainers = [{name = "Balbastre, Yael", email = "y.balbastre@ucl.ac.uk"}]
description = "ABC...Z(arr) - Abstract base classes for the Zarr format, and vendored implementations"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "typing_extensions >= 4.13",            # TypedDict(..., extra_items=...)
    "attrs >= 20.1.0",                      # @define
    "numpy >= 1.20.0",                      # numpy.typing.DTypeLike
    "dask[array,diagnostics] >= 2.9.1",     # nanmedian
]

[project.optional-dependencies]

# fancy
tqdm = ["tqdm"]
upath = ["universal-pathlib"]
anypath = ["cloudpathlib"]

# drivers
zarr-py = ["zarr"]
tensorstore = ["tensorstore"]

# test
test = ["pytest"]

# doc
doc = [
  "zensical>=0.0.11",
  "mkdocstrings[python]>=1.0.0",
  "markdown-grid-tables",
]

[project.urls]
Homepage = "https://github.com/neuroscales/abczarr"
Issues = "https://github.com/neuroscales/abczarr/issues"

[build-system]
requires = [
    "setuptools>=59",
    "wheel",
    "versioningit>=1.0",
]
build-backend = "setuptools.build_meta"

[tool.versioningit]
default-version = "0+unknown"

[tool.versioningit.vcs]
default-tag = "0.1"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "src/abczarr/_version.py"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.lint]
select = ["ANN", "B", "E", "F", "I", "UP", "W"]
ignore = [
    "ANN002",  # Allow missing type annotations for *args
    "ANN003",  # Allow missing type annotations for **kwargs
    "ANN401",  # Allow annotating with Any
    "UP006",   # Allow annotating with typing.Type instead of type
]
